--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -15,5 +15,4 @@ install:
 build_script:
   # запускаем тест, флаг --info позволяет выводить больше информации
   - chmod +x gradlew
-  - ./gradlew test --info
-  - gradlew test -Dselenide.headless=true
+  - ./gradlew test --info "-Dselenide.headless=true"
